SERVER-58142: TenantOplogBatcher should transition to complete when the next batch callback is called with error status